--- a/app/views/books/_comment.html.erb
+++ b/app/views/books/_comment.html.erb
@@ -20,7 +20,7 @@
                 </td>
                 <td><%= book_comment.comment %></td>
                 <% if book_comment.user_id == current_user.id %>
-                <td><%= link_to "削除", book_book_comment_path(book_comment.book_id, book_comment.id), method: :delete %></td>
+                <td><%= link_to "Destroy", book_book_comment_path(book_comment.book_id, book_comment.id), method: :delete %></td>
                 <% end %>
               </tr>
             <% end %>
